--- a/Index.html
+++ b/Index.html
@@ -103,66 +103,66 @@
   <div class="container">
     <div id="question1" class="question fade-in" style="display: block;">
       <p>Question 1: What is the capital of Iceland?</p>
-      <input type="radio" name="q1" value="1"> a) Nitrogen<br>
-      <input type="radio" name="q1" value="2"> b) Oxygen<br>
-      <input type="radio" name="q1" value="3"> c) Carbon Dioxide<br>
-      <input type="radio" name="q1" value="4"> d) Hydrogen<br>
+      <input type="radio" name="q1" value="1"> a) Oslo<br>
+      <input type="radio" name="q1" value="2"> b) Reykjavik<br>
+      <input type="radio" name="q1" value="3"> c) Helsinki<br>
+      <input type="radio" name="q1" value="4"> d) Copenhagen<br>
       <button onclick="checkAnswer(1)">Next Question</button>
     </div>
     <div id="question2" class="question fade-out">
       <p>Question 2: What is the capital of Ireland?</p>
-      <input type="radio" name="q2" value="1"> a) Absorbing UV rays<br>
-      <input type="radio" name="q2" value="2"> b) Conserving Heat<br>
-      <input type="radio" name="q2" value="3"> c) Provide gravity<br>
-      <input type="radio" name="q2" value="4"> d) Regulate orbital status<br>
+      <input type="radio" name="q2" value="1"> a) Dublin<br>
+      <input type="radio" name="q2" value="2"> b) Edinburgh<br>
+      <input type="radio" name="q2" value="3"> c) Cardiff<br>
+      <input type="radio" name="q2" value="4"> d) Belfast<br>
       <button onclick="checkAnswer(2)" disabled>Next Question</button>
     </div>
     <div id="question3" class="question fade-out">
       <p>Question 3: What is the capital of England?</p>
-      <input type="radio" name="q3" value="1"> a) Carbon Monoxide<br>
-      <input type="radio" name="q3" value="2"> b) Vinyl chloride<br>
-      <input type="radio" name="q3" value="3"> c) Hydroxyl radical<br>
-      <input type="radio" name="q3" value="4"> d) Sulfur dioxide<br>
+      <input type="radio" name="q3" value="1"> a) Manchester<br>
+      <input type="radio" name="q3" value="2"> b) Birmingham<br>
+      <input type="radio" name="q3" value="3"> c) London<br>
+      <input type="radio" name="q3" value="4"> d) Liverpool<br>
       <button onclick="checkAnswer(3)" disabled>Next Question</button>
     </div>
     <div id="question4" class="question fade-out">
       <p>Question 4: What is the capital of France?</p>
-      <input type="radio" name="q4" value="1"> a) North America<br>
-      <input type="radio" name="q4" value="2"> b) Europe<br>
-      <input type="radio" name="q4" value="3"> c) Antartica<br>
-      <input type="radio" name="q4" value="4"> d) Africa<br>
+      <input type="radio" name="q4" value="1"> a) Toulouse<br>
+      <input type="radio" name="q4" value="2"> b) Lyon<br>
+      <input type="radio" name="q4" value="3"> c) Paris<br>
+      <input type="radio" name="q4" value="4"> d) Marseille<br>
       <button onclick="checkAnswer(4)" disabled>Submit</button>
     </div>
     <div id="question5" class="question fade-out">
       <p>Question 5: What is the capital of Spain?</p>
-      <input type="radio" name="q5" value="1"> a) The place in the North Pole that pulls compass pins<br>
-      <input type="radio" name="q5" value="2"> b) The entire range of light<br>
-      <input type="radio" name="q5" value="3"> c) A charger for a device<br>
-      <input type="radio" name="q5" value="4"> d) Radiation<br>
+      <input type="radio" name="q5" value="1"> a) Barcelona<br>
+      <input type="radio" name="q5" value="2"> b) Madrid<br>
+      <input type="radio" name="q5" value="3"> c) Valencia<br>
+      <input type="radio" name="q5" value="4"> d) Seville<br>
       <button onclick="checkAnswer(5)" disabled>Next Question</button>
     </div>
     <div id="question6" class="question fade-out">
       <p>Question 6: What the capital of Portugal?</p>
-      <input type="radio" name="q6" value="1"> a) Ultraviolent<br>
-      <input type="radio" name="q6" value="2"> b) Usefulvolt<br>
-      <input type="radio" name="q6" value="3"> c) Uppervolt<br>
-      <input type="radio" name="q6" value="4"> d) Ultraviolet<br>
+      <input type="radio" name="q6" value="1"> a) Porto<br>
+      <input type="radio" name="q6" value="2"> b) Faro<br>
+      <input type="radio" name="q6" value="3"> c) Coimbra<br>
+      <input type="radio" name="q6" value="4"> d) Lisbon<br>
       <button onclick="checkAnswer(6)" disabled>Next Question</button>
     </div>
     <div id="question7" class="question fade-out">
       <p>Question 7: What is the capital of Luxembourg?</p>
-      <input type="radio" name="q7" value="1"> a) Blue<br>
-      <input type="radio" name="q7" value="2"> b) Yellow<br>
-      <input type="radio" name="q7" value="3"> c) Red<br>
-      <input type="radio" name="q7" value="4"> d) White<br>
+      <input type="radio" name="q7" value="1"> a) Luxembourg City<br>
+      <input type="radio" name="q7" value="2"> b) Esch-sur-Alzette<br>
+      <input type="radio" name="q7" value="3"> c) Dudelange<br>
+      <input type="radio" name="q7" value="4"> d) Differdange<br>
       <button onclick="checkAnswer(7)" disabled>Next Question</button>
     </div>
     <div id="question8" class="question fade-out">
       <p>Question 8: What is the capital of Belguim?</p>
-      <input type="radio" name="q8" value="1"> a) Supernovas<br>
-      <input type="radio" name="q8" value="2"> b) Earth<br>
-      <input type="radio" name="q8" value="3"> c) Exotic neutron stars<br>
-      <input type="radio" name="q8" value="4"> d) Our Sun<br>
+      <input type="radio" name="q8" value="1"> a) Ghent<br>
+      <input type="radio" name="q8" value="2"> b) Antwerp<br>
+      <input type="radio" name="q8" value="3"> c) Brussels<br>
+      <input type="radio" name="q8" value="4"> d) Bruges<br>
       <button onclick="checkAnswer(8)" disabled>Submit</button>
     </div>
     <div id="question9" class="question fade-out">
