--- a/Index.html
+++ b/Index.html
@@ -167,47 +167,47 @@
     </div>
     <div id="question9" class="question fade-out">
       <p>Question 9: What is the capital of Netherlands?</p>
-      <input type="radio" name="q9" value="1"> a) Our Sun<br>
-      <input type="radio" name="q9" value="2"> b) Exotic neutron stars<br>
-      <input type="radio" name="q9" value="3"> c) Earth<br>
-      <input type="radio" name="q9" value="4"> d) Supernovas<br>
+      <input type="radio" name="q9" value="1"> a) Utrecht<br>
+      <input type="radio" name="q9" value="2"> b) The Hague<br>
+      <input type="radio" name="q9" value="3"> c) Rotterdam<br>
+      <input type="radio" name="q9" value="4"> d) Amsterdam<br>
       <button onclick="checkAnswer(9)" disabled>Next Question</button>
     </div>
     <div id="question10" class="question fade-out">
       <p>Question 10: What is the capital of Germany?</p>
-      <input type="radio" name="q10" value="1"> a) Good<br>
-      <input type="radio" name="q10" value="2"> b) Goldilocks planet<br>
-      <input type="radio" name="q10" value="3"> c) Life-sustaining planet<br>
-      <input type="radio" name="q10" value="4"> d) Planet<br>
+      <input type="radio" name="q10" value="1"> a) Munich<br>
+      <input type="radio" name="q10" value="2"> b) Berlin<br>
+      <input type="radio" name="q10" value="3"> c) Hamburg<br>
+      <input type="radio" name="q10" value="4"> d) Franfurt<br>
       <button onclick="checkAnswer(10)" disabled>Next Question</button>
     </div>
     <div id="question11" class="question fade-out">
       <p>Question 11: What is the capital of Denmark?</p>
-      <input type="radio" name="q11" value="1"> a) Pattern<br>
+      <input type="radio" name="q11" value="1"> a) Aarhus<br>
       <input type="radio" name="q11" value="2"> b) Wetness<br>
-      <input type="radio" name="q11" value="3"> c) Feedback<br>
-      <input type="radio" name="q11" value="4"> d) Matter<br>
+      <input type="radio" name="q11" value="3"> c) Odense<br>
+      <input type="radio" name="q11" value="4"> d) Aalborg<br>
       <button onclick="checkAnswer(11)" disabled>Next Question</button>
     </div>
     <div id="question12" class="question fade-out">
       <p>Question 12: What is the capital of Austria?</p>
-      <input type="radio" name="q12" value="1"> a) 1/1,000,000<br>
-      <input type="radio" name="q12" value="2"> b) 1/190<br>
-      <input type="radio" name="q12" value="3"> c) 5/643<br>
-      <input type="radio" name="q12" value="4"> d) 1/100,000<br>
+      <input type="radio" name="q12" value="1"> a) Graz<br>
+      <input type="radio" name="q12" value="2"> b) Vienna<br>
+      <input type="radio" name="q12" value="3"> c) Linz<br>
+      <input type="radio" name="q12" value="4"> d) Salzburg<br>
       <button onclick="checkAnswer(12)" disabled>Submit</button>
     </div>
     <div id="question13" class="question fade-out">
       <p>Question 13: What is the capital of Italy?</p>
-      <input type="radio" name="q13" value="1"> a) 1/1,000,000<br>
-      <input type="radio" name="q13" value="2"> b) 1/190<br>
-      <input type="radio" name="q13" value="3"> c) 5/643<br>
-      <input type="radio" name="q13" value="4"> d) 1/100,000<br>
+      <input type="radio" name="q13" value="1"> a) Milan<br>
+      <input type="radio" name="q13" value="2"> b) Naples<br>
+      <input type="radio" name="q13" value="3"> c) Rome<br>
+      <input type="radio" name="q13" value="4"> d) Turin<br>
       <button onclick="checkAnswer(13)" disabled>Submit</button>
     </div>
     <div id="question14" class="question fade-out">
       <p>Question 14: What is the capital of Greece?</p>
-      <input type="radio" name="q14" value="1"> a) 1/1,000,000<br>
+      <input type="radio" name="q14" value="1"> a) Athens<br>
       <input type="radio" name="q14" value="2"> b) 1/190<br>
       <input type="radio" name="q14" value="3"> c) 5/643<br>
       <input type="radio" name="q14" value="4"> d) 1/100,000<br>
@@ -215,7 +215,7 @@
     </div>
     <div id="question15" class="question fade-out">
       <p>Question 15: What is the capital of Norway?</p>
-      <input type="radio" name="q15" value="1"> a) 1/1,000,000<br>
+      <input type="radio" name="q15" value="1"> a) Oslo<br>
       <input type="radio" name="q15" value="2"> b) 1/190<br>
       <input type="radio" name="q15" value="3"> c) 5/643<br>
       <input type="radio" name="q15" value="4"> d) 1/100,000<br>
