--- a/Index.html
+++ b/Index.html
@@ -208,17 +208,17 @@
     <div id="question14" class="question fade-out">
       <p>Question 14: What is the capital of Greece?</p>
       <input type="radio" name="q14" value="1"> a) Athens<br>
-      <input type="radio" name="q14" value="2"> b) 1/190<br>
-      <input type="radio" name="q14" value="3"> c) 5/643<br>
-      <input type="radio" name="q14" value="4"> d) 1/100,000<br>
+      <input type="radio" name="q14" value="2"> b) Thessaloniki<br>
+      <input type="radio" name="q14" value="3"> c) Patras<br>
+      <input type="radio" name="q14" value="4"> d) Heraklion<br>
       <button onclick="checkAnswer(14)" disabled>Submit</button>
     </div>
     <div id="question15" class="question fade-out">
       <p>Question 15: What is the capital of Norway?</p>
       <input type="radio" name="q15" value="1"> a) Oslo<br>
-      <input type="radio" name="q15" value="2"> b) 1/190<br>
-      <input type="radio" name="q15" value="3"> c) 5/643<br>
-      <input type="radio" name="q15" value="4"> d) 1/100,000<br>
+      <input type="radio" name="q15" value="2"> b) Bergen<br>
+      <input type="radio" name="q15" value="3"> c) Stavanger<br>
+      <input type="radio" name="q15" value="4"> d) Trondheim<br>
       <button onclick="checkAnswer(15)" disabled>Submit</button>
     </div>
     <div id="question16" class="question fade-out">
