--- a/Index.html
+++ b/Index.html
@@ -223,18 +223,18 @@
     </div>
     <div id="question16" class="question fade-out">
       <p>Question 16: What is the capital of Sweden?</p>
-      <input type="radio" name="q16" value="1"> a) 1/1,000,000<br>
-      <input type="radio" name="q16" value="2"> b) 1/190<br>
-      <input type="radio" name="q16" value="3"> c) 5/643<br>
-      <input type="radio" name="q16" value="4"> d) 1/100,000<br>
+      <input type="radio" name="q16" value="1"> a) Gothenburg<br>
+      <input type="radio" name="q16" value="2"> b) Malmö<br>
+      <input type="radio" name="q16" value="3"> c) Uppsala<br>
+      <input type="radio" name="q16" value="4"> d) Stockholm<br>
       <button onclick="checkAnswer(16)" disabled>Submit</button>
     </div>
     <div id="question17" class="question fade-out">
       <p>Question 17: What is the capital of Finland?</p>
-      <input type="radio" name="q17" value="1"> a) 1/1,000,000<br>
-      <input type="radio" name="q17" value="2"> b) 1/190<br>
-      <input type="radio" name="q17" value="3"> c) 5/643<br>
-      <input type="radio" name="q17" value="4"> d) 1/100,000<br>
+      <input type="radio" name="q17" value="1"> a) Espoo<br>
+      <input type="radio" name="q17" value="2"> b) Helsinki<br>
+      <input type="radio" name="q17" value="3"> c) Trampere<br>
+      <input type="radio" name="q17" value="4"> d) Vantaa<br>
       <button onclick="checkAnswer(17)" disabled>Submit</button>
     </div>
     <div id="result"></div>
